--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     
-</body>
+    <form>
+      <span>Zadanie: </span><input type="text" class="input" />
+      <button class="button">dodaj</button>
+    </form>
+    <div>
+        <ol class="zadanie">
+
+        </ol>
+      </div>
+  </body>
 </html>
