--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     
     <form>
-      <span>Zadanie: </span><input type="text" class="input" name="TaskInput" />
-      <button class="button addButton">dodaj</button>
+      <span>Task: </span><input type="text" class="input" name="TaskInput" />
+      <button class="button addButton">Add Task</button>
     </form>
     <main class="main">
       <div class="main__element">
